// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render announcement 1`] = `null`;

exports[`does not render for Global Community 1`] = `null`;

exports[`does not render for step 1`] = `null`;

exports[`does render announcement for owner 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
      "elevation": 4,
      "marginBottom": 5,
      "marginTop": -5,
      "paddingTop": 5,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ECEEF2",
        "borderRadius": 20,
        "borderWidth": 0,
        "flexDirection": "row",
        "height": 36,
        "justifyContent": "flex-start",
        "margin": 0,
        "marginHorizontal": 20,
        "marginVertical": 20,
        "opacity": 1,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      }
    }
    testID="CreatePostButton"
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "uri": "natus et eos",
        }
      }
      style={
        Array [
          Object {
            "borderColor": "#ffffff",
            "borderRadius": 12,
            "borderWidth": 1,
            "height": 24,
            "width": 24,
          },
          Object {
            "backgroundColor": "rgb(135, 154, 115)",
          },
          Object {
            "marginLeft": -15,
          },
        ]
      }
    />
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "paddingLeft": 10,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Make an Announcement
    </Text>
  </View>
</View>
`;

exports[`onPress opens modal 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -16,10 +16,452 @@
        \\"shadowOpacity\\": 0.3,
        \\"shadowRadius\\": 2,
      }
    }
  >
+   <Modal
+     animationType=\\"slide\\"
+     hardwareAccelerated={false}
+     transparent={true}
+     visible={true}
+   >
+     <View
+       style={
+         Object {
+           \\"alignItems\\": \\"center\\",
+           \\"backgroundColor\\": \\"rgba(0,0,0,0.5)\\",
+           \\"flex\\": 1,
+           \\"justifyContent\\": \\"center\\",
+         }
+       }
+     >
+       <View
+         style={
+           Array [
+             Object {
+               \\"alignItems\\": \\"center\\",
+               \\"backgroundColor\\": \\"#ffffff\\",
+               \\"borderRadius\\": 14,
+               \\"justifyContent\\": \\"space-around\\",
+               \\"padding\\": 14,
+               \\"paddingVertical\\": 50,
+               \\"width\\": \\"80%\\",
+             },
+           ]
+         }
+       >
+         <View
+           style={
+             Array [
+               Object {
+                 \\"width\\": \\"100%\\",
+               },
+               Object {
+                 \\"flexDirection\\": \\"row\\",
+                 \\"justifyContent\\": \\"flex-end\\",
+               },
+             ]
+           }
+         >
+           <View
+             accessible={true}
+             focusable={true}
+             onClick={[Function onClick]}
+             onResponderGrant={[Function onResponderGrant]}
+             onResponderMove={[Function onResponderMove]}
+             onResponderRelease={[Function onResponderRelease]}
+             onResponderTerminate={[Function onResponderTerminate]}
+             onResponderTerminationRequest={[Function onResponderTerminationRequest]}
+             onStartShouldSetResponder={[Function onStartShouldSetResponder]}
+             style={
+               Object {
+                 \\"alignItems\\": \\"flex-start\\",
+                 \\"alignSelf\\": \\"flex-start\\",
+                 \\"backgroundColor\\": \\"transparent\\",
+                 \\"borderRadius\\": 0,
+                 \\"borderWidth\\": 0,
+                 \\"color\\": \\"#B4B6BA\\",
+                 \\"height\\": 60,
+                 \\"justifyContent\\": \\"flex-end\\",
+                 \\"margin\\": 0,
+                 \\"opacity\\": 1,
+                 \\"padding\\": 15,
+                 \\"paddingHorizontal\\": 20,
+                 \\"paddingVertical\\": 10,
+                 \\"position\\": \\"absolute\\",
+                 \\"right\\": -20,
+                 \\"top\\": -50,
+               }
+             }
+             testID=\\"CloseButton\\"
+           >
+             <SvgMock
+               color=\\"#B4B6BA\\"
+             />
+           </View>
+         </View>
+         <Text
+           style={
+             Object {
+               \\"color\\": \\"#505256\\",
+               \\"fontFamily\\": \\"SourceSansPro-Regular\\",
+               \\"fontSize\\": 14,
+               \\"fontStyle\\": \\"normal\\",
+               \\"fontWeight\\": \\"normal\\",
+               \\"lineHeight\\": 20,
+               \\"paddingBottom\\": 20,
+               \\"textAlign\\": \\"center\\",
+               \\"textAlignVertical\\": \\"center\\",
+               \\"textTransform\\": \\"none\\",
+             }
+           }
+         >
+           Choose a Post Type
+         </Text>
+         <View
+           style={
+             Object {
+               \\"marginVertical\\": 10,
+             }
+           }
+         >
+           <View
+             accessible={true}
+             focusable={true}
+             onClick={[Function onClick]}
+             onResponderGrant={[Function onResponderGrant]}
+             onResponderMove={[Function onResponderMove]}
+             onResponderRelease={[Function onResponderRelease]}
+             onResponderTerminate={[Function onResponderTerminate]}
+             onResponderTerminationRequest={[Function onResponderTerminationRequest]}
+             onStartShouldSetResponder={[Function onStartShouldSetResponder]}
+             style={
+               Object {
+                 \\"alignItems\\": \\"center\\",
+                 \\"backgroundColor\\": \\"#7076B5\\",
+                 \\"borderRadius\\": 50,
+                 \\"borderWidth\\": 0,
+                 \\"flexDirection\\": \\"row\\",
+                 \\"height\\": 48,
+                 \\"justifyContent\\": \\"space-between\\",
+                 \\"margin\\": 0,
+                 \\"opacity\\": 1,
+                 \\"paddingHorizontal\\": 20,
+                 \\"paddingLeft\\": 20,
+                 \\"paddingRight\\": 16,
+                 \\"paddingVertical\\": 0,
+               }
+             }
+             testID=\\"STORYButton\\"
+           >
+             <SvgMock
+               color=\\"#ffffff\\"
+               height={24}
+               style={
+                 Array [
+                   Object {
+                     \\"marginLeft\\": -10,
+                     \\"marginRight\\": 10,
+                   },
+                   undefined,
+                 ]
+               }
+               width={24}
+             />
+             <Text
+               style={
+                 Object {
+                   \\"color\\": \\"#ffffff\\",
+                   \\"fontFamily\\": \\"SourceSansPro-Regular\\",
+                   \\"fontSize\\": 14,
+                   \\"fontStyle\\": \\"normal\\",
+                   \\"fontWeight\\": \\"normal\\",
+                   \\"lineHeight\\": 20,
+                   \\"textAlignVertical\\": \\"center\\",
+                   \\"textTransform\\": \\"none\\",
+                 }
+               }
+             >
+               God Story
+             </Text>
+           </View>
+         </View>
+         <View
+           style={
+             Object {
+               \\"marginVertical\\": 10,
+             }
+           }
+         >
+           <View
+             accessible={true}
+             focusable={true}
+             onClick={[Function onClick]}
+             onResponderGrant={[Function onResponderGrant]}
+             onResponderMove={[Function onResponderMove]}
+             onResponderRelease={[Function onResponderRelease]}
+             onResponderTerminate={[Function onResponderTerminate]}
+             onResponderTerminationRequest={[Function onResponderTerminationRequest]}
+             onStartShouldSetResponder={[Function onStartShouldSetResponder]}
+             style={
+               Object {
+                 \\"alignItems\\": \\"center\\",
+                 \\"backgroundColor\\": \\"#A97398\\",
+                 \\"borderRadius\\": 50,
+                 \\"borderWidth\\": 0,
+                 \\"flexDirection\\": \\"row\\",
+                 \\"height\\": 48,
+                 \\"justifyContent\\": \\"space-between\\",
+                 \\"margin\\": 0,
+                 \\"opacity\\": 1,
+                 \\"paddingHorizontal\\": 20,
+                 \\"paddingLeft\\": 20,
+                 \\"paddingRight\\": 16,
+                 \\"paddingVertical\\": 0,
+               }
+             }
+             testID=\\"PRAYER_REQUESTButton\\"
+           >
+             <SvgMock
+               color=\\"#ffffff\\"
+               height={24}
+               style={
+                 Array [
+                   Object {
+                     \\"marginLeft\\": -10,
+                     \\"marginRight\\": 10,
+                   },
+                   undefined,
+                 ]
+               }
+               width={24}
+             />
+             <Text
+               style={
+                 Object {
+                   \\"color\\": \\"#ffffff\\",
+                   \\"fontFamily\\": \\"SourceSansPro-Regular\\",
+                   \\"fontSize\\": 14,
+                   \\"fontStyle\\": \\"normal\\",
+                   \\"fontWeight\\": \\"normal\\",
+                   \\"lineHeight\\": 20,
+                   \\"textAlignVertical\\": \\"center\\",
+                   \\"textTransform\\": \\"none\\",
+                 }
+               }
+             >
+               Prayer Request
+             </Text>
+           </View>
+         </View>
+         <View
+           style={
+             Object {
+               \\"marginVertical\\": 10,
+             }
+           }
+         >
+           <View
+             accessible={true}
+             focusable={true}
+             onClick={[Function onClick]}
+             onResponderGrant={[Function onResponderGrant]}
+             onResponderMove={[Function onResponderMove]}
+             onResponderRelease={[Function onResponderRelease]}
+             onResponderTerminate={[Function onResponderTerminate]}
+             onResponderTerminationRequest={[Function onResponderTerminationRequest]}
+             onStartShouldSetResponder={[Function onStartShouldSetResponder]}
+             style={
+               Object {
+                 \\"alignItems\\": \\"center\\",
+                 \\"backgroundColor\\": \\"#FFA178\\",
+                 \\"borderRadius\\": 50,
+                 \\"borderWidth\\": 0,
+                 \\"flexDirection\\": \\"row\\",
+                 \\"height\\": 48,
+                 \\"justifyContent\\": \\"space-between\\",
+                 \\"margin\\": 0,
+                 \\"opacity\\": 1,
+                 \\"paddingHorizontal\\": 20,
+                 \\"paddingLeft\\": 20,
+                 \\"paddingRight\\": 16,
+                 \\"paddingVertical\\": 0,
+               }
+             }
+             testID=\\"QUESTIONButton\\"
+           >
+             <SvgMock
+               color=\\"#ffffff\\"
+               height={24}
+               style={
+                 Array [
+                   Object {
+                     \\"marginLeft\\": -10,
+                     \\"marginRight\\": 10,
+                   },
+                   undefined,
+                 ]
+               }
+               width={24}
+             />
+             <Text
+               style={
+                 Object {
+                   \\"color\\": \\"#ffffff\\",
+                   \\"fontFamily\\": \\"SourceSansPro-Regular\\",
+                   \\"fontSize\\": 14,
+                   \\"fontStyle\\": \\"normal\\",
+                   \\"fontWeight\\": \\"normal\\",
+                   \\"lineHeight\\": 20,
+                   \\"textAlignVertical\\": \\"center\\",
+                   \\"textTransform\\": \\"none\\",
+                 }
+               }
+             >
+               Spiritual Question
+             </Text>
+           </View>
+         </View>
+         <View
+           style={
+             Object {
+               \\"marginVertical\\": 10,
+             }
+           }
+         >
+           <View
+             accessible={true}
+             focusable={true}
+             onClick={[Function onClick]}
+             onResponderGrant={[Function onResponderGrant]}
+             onResponderMove={[Function onResponderMove]}
+             onResponderRelease={[Function onResponderRelease]}
+             onResponderTerminate={[Function onResponderTerminate]}
+             onResponderTerminationRequest={[Function onResponderTerminationRequest]}
+             onStartShouldSetResponder={[Function onStartShouldSetResponder]}
+             style={
+               Object {
+                 \\"alignItems\\": \\"center\\",
+                 \\"backgroundColor\\": \\"#FD726D\\",
+                 \\"borderRadius\\": 50,
+                 \\"borderWidth\\": 0,
+                 \\"flexDirection\\": \\"row\\",
+                 \\"height\\": 48,
+                 \\"justifyContent\\": \\"space-between\\",
+                 \\"margin\\": 0,
+                 \\"opacity\\": 1,
+                 \\"paddingHorizontal\\": 20,
+                 \\"paddingLeft\\": 20,
+                 \\"paddingRight\\": 16,
+                 \\"paddingVertical\\": 0,
+               }
+             }
+             testID=\\"HELP_REQUESTButton\\"
+           >
+             <SvgMock
+               color=\\"#ffffff\\"
+               height={24}
+               style={
+                 Array [
+                   Object {
+                     \\"marginLeft\\": -10,
+                     \\"marginRight\\": 10,
+                   },
+                   undefined,
+                 ]
+               }
+               width={24}
+             />
+             <Text
+               style={
+                 Object {
+                   \\"color\\": \\"#ffffff\\",
+                   \\"fontFamily\\": \\"SourceSansPro-Regular\\",
+                   \\"fontSize\\": 14,
+                   \\"fontStyle\\": \\"normal\\",
+                   \\"fontWeight\\": \\"normal\\",
+                   \\"lineHeight\\": 20,
+                   \\"textAlignVertical\\": \\"center\\",
+                   \\"textTransform\\": \\"none\\",
+                 }
+               }
+             >
+               Community Need
+             </Text>
+           </View>
+         </View>
+         <View
+           style={
+             Object {
+               \\"marginVertical\\": 10,
+             }
+           }
+         >
+           <View
+             accessible={true}
+             focusable={true}
+             onClick={[Function onClick]}
+             onResponderGrant={[Function onResponderGrant]}
+             onResponderMove={[Function onResponderMove]}
+             onResponderRelease={[Function onResponderRelease]}
+             onResponderTerminate={[Function onResponderTerminate]}
+             onResponderTerminationRequest={[Function onResponderTerminationRequest]}
+             onStartShouldSetResponder={[Function onStartShouldSetResponder]}
+             style={
+               Object {
+                 \\"alignItems\\": \\"center\\",
+                 \\"backgroundColor\\": \\"#B4B6BA\\",
+                 \\"borderRadius\\": 50,
+                 \\"borderWidth\\": 0,
+                 \\"flexDirection\\": \\"row\\",
+                 \\"height\\": 48,
+                 \\"justifyContent\\": \\"space-between\\",
+                 \\"margin\\": 0,
+                 \\"opacity\\": 1,
+                 \\"paddingHorizontal\\": 20,
+                 \\"paddingLeft\\": 20,
+                 \\"paddingRight\\": 16,
+                 \\"paddingVertical\\": 0,
+               }
+             }
+             testID=\\"THOUGHTButton\\"
+           >
+             <SvgMock
+               color=\\"#ffffff\\"
+               height={24}
+               style={
+                 Array [
+                   Object {
+                     \\"marginLeft\\": -10,
+                     \\"marginRight\\": 10,
+                   },
+                   undefined,
+                 ]
+               }
+               width={24}
+             />
+             <Text
+               style={
+                 Object {
+                   \\"color\\": \\"#ffffff\\",
+                   \\"fontFamily\\": \\"SourceSansPro-Regular\\",
+                   \\"fontSize\\": 14,
+                   \\"fontStyle\\": \\"normal\\",
+                   \\"fontWeight\\": \\"normal\\",
+                   \\"lineHeight\\": 20,
+                   \\"textAlignVertical\\": \\"center\\",
+                   \\"textTransform\\": \\"none\\",
+                 }
+               }
+             >
+               What's on Your Mind
+             </Text>
+           </View>
+         </View>
+       </View>
+     </View>
+   </Modal>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function onClick]}
      onResponderGrant={[Function onResponderGrant]}"
`;

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
      "elevation": 4,
      "marginBottom": 5,
      "marginTop": -5,
      "paddingTop": 5,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ECEEF2",
        "borderRadius": 20,
        "borderWidth": 0,
        "flexDirection": "row",
        "height": 36,
        "justifyContent": "flex-start",
        "margin": 0,
        "marginHorizontal": 20,
        "marginVertical": 20,
        "opacity": 1,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      }
    }
    testID="CreatePostButton"
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "uri": "velit omnis et",
        }
      }
      style={
        Array [
          Object {
            "borderColor": "#ffffff",
            "borderRadius": 12,
            "borderWidth": 1,
            "height": 24,
            "width": 24,
          },
          Object {
            "backgroundColor": "rgb(161, 155, 115)",
          },
          Object {
            "marginLeft": -15,
          },
        ]
      }
    />
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "paddingLeft": 10,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Post to community...
    </Text>
  </View>
</View>
`;

exports[`renders correctly for admin 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
      "elevation": 4,
      "marginBottom": 5,
      "marginTop": -5,
      "paddingTop": 5,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ECEEF2",
        "borderRadius": 20,
        "borderWidth": 0,
        "flexDirection": "row",
        "height": 36,
        "justifyContent": "flex-start",
        "margin": 0,
        "marginHorizontal": 20,
        "marginVertical": 20,
        "opacity": 1,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      }
    }
    testID="CreatePostButton"
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "uri": "natus et eos",
        }
      }
      style={
        Array [
          Object {
            "borderColor": "#ffffff",
            "borderRadius": 12,
            "borderWidth": 1,
            "height": 24,
            "width": 24,
          },
          Object {
            "backgroundColor": "rgb(155, 154, 115)",
          },
          Object {
            "marginLeft": -15,
          },
        ]
      }
    />
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "paddingLeft": 10,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Post to community...
    </Text>
  </View>
</View>
`;

exports[`renders correctly for owner 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
      "elevation": 4,
      "marginBottom": 5,
      "marginTop": -5,
      "paddingTop": 5,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ECEEF2",
        "borderRadius": 20,
        "borderWidth": 0,
        "flexDirection": "row",
        "height": 36,
        "justifyContent": "flex-start",
        "margin": 0,
        "marginHorizontal": 20,
        "marginVertical": 20,
        "opacity": 1,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      }
    }
    testID="CreatePostButton"
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "uri": "natus et eos",
        }
      }
      style={
        Array [
          Object {
            "borderColor": "#ffffff",
            "borderRadius": 12,
            "borderWidth": 1,
            "height": 24,
            "width": 24,
          },
          Object {
            "backgroundColor": "rgb(155, 154, 115)",
          },
          Object {
            "marginLeft": -15,
          },
        ]
      }
    />
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "paddingLeft": 10,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Post to community...
    </Text>
  </View>
</View>
`;

exports[`renders correctly with type 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
      "elevation": 4,
      "marginBottom": 5,
      "marginTop": -5,
      "paddingTop": 5,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 1,
        "width": 0,
      },
      "shadowOpacity": 0.3,
      "shadowRadius": 2,
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#ECEEF2",
        "borderRadius": 20,
        "borderWidth": 0,
        "flexDirection": "row",
        "height": 36,
        "justifyContent": "flex-start",
        "margin": 0,
        "marginHorizontal": 20,
        "marginVertical": 20,
        "opacity": 1,
        "paddingHorizontal": 20,
        "paddingVertical": 10,
      }
    }
    testID="CreatePostButton"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "justifyContent": "center",
          },
          Array [
            Object {
              "borderColor": "#ffffff",
              "borderRadius": 12,
              "borderWidth": 1,
              "height": 24,
              "width": 24,
            },
            Object {
              "backgroundColor": "#B4B6BA",
            },
            Object {
              "marginLeft": -15,
            },
          ],
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
            },
            Object {
              "fontSize": 12,
            },
          ]
        }
      >
        
      </Text>
    </View>
    <Text
      style={
        Object {
          "color": "#505256",
          "fontFamily": "SourceSansPro-Regular",
          "fontSize": 14,
          "fontStyle": "normal",
          "fontWeight": "normal",
          "lineHeight": 20,
          "paddingLeft": 10,
          "textAlignVertical": "center",
          "textTransform": "none",
        }
      }
    >
      Share a God Story
    </Text>
  </View>
</View>
`;
